<resources>
    <string name="app_name">KINODATA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
    <string name="see_all">See All  ></string>
    <string name="top_rated">Top Rated</string>
    <string name="language">en-US</string>
    <string name="now_in_theaters">Now In Theaters</string>
    <string name="upcoming">Upcoming</string>
    <string name="movies">Movies</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="topRated">Top Rated</string>
    <string name="stars">Stars:</string>
    <string name="and_others"> and others</string>
    <string name="rate">Rate</string>
    <string name="reviews">Reviews</string>
    <string name="reviewExample">**Black Adam might not reinvent the wheel, but it doesn’t have to. It just wants to take you on a fun, entertaining, exciting superhero ride!**\r\n\r\nBlack Adam has its haters, and I can understand why. It doesn’t necessarily break new ground in the superhero genre, but that doesn’t stop it from being awesome! Action-packed from start to finish. The effects are incredible. I kept myself from saying Wow out loud on multiple occasions. Dwayne Johnson’s Black Adam is absolutely ruthless, ripping armies of henchmen with ease and speed. I was worried a PG-13 rating might soften his brutality, but it did not! The action sequences looked amazing and were well done. I really liked the Justice Society characters, although they all felt a little stereotypical with a SpiderMan jokester, a wise old Professor X, and a quipping leader in the vain of Wolverine or Deadshot. Pierce Brosnan was perfect at Dr. Fate, making me wish he hadn’t been relegated to special guest star status. The movie didn’t waste a ton of time giving background on each character which was wise with so many new heroes on screen. The film had its moments of cheese but didn’t overdo it. Definitely watch the mid-credit scene. It’s stupendous! Black Adam was a fine addition to the superhero genre, and I look forward to what comes next.**Black Adam might not reinvent the wheel, but it doesn’t have to. It just wants to take you on a fun, entertaining, exciting superhero ride!**\r\n\r\nBlack Adam has its haters, and I can understand why. It doesn’t necessarily break new ground in the superhero genre, but that doesn’t stop it from being awesome! Action-packed from start to finish. The effects are incredible. I kept myself from saying Wow out loud on multiple occasions. Dwayne Johnson’s Black Adam is absolutely ruthless, ripping armies of henchmen with ease and speed. I was worried a PG-13 rating might soften his brutality, but it did not! The action sequences looked amazing and were well done. I really liked the Justice Society characters, although they all felt a little stereotypical with a SpiderMan jokester, a wise old Professor X, and a quipping leader in the vain of Wolverine or Deadshot. Pierce Brosnan was perfect at Dr. Fate, making me wish he hadn’t been relegated to special guest star status. The movie didn’t waste a ton of time giving background on each character which was wise with so many new heroes on screen. The film had its moments of cheese but didn’t overdo it. Definitely watch the mid-credit scene. It’s stupendous! Black Adam was a fine addition to the superhero genre, and I look forward to what comes next.**Black Adam might not reinvent the wheel, but it doesn’t have to. It just wants to take you on a fun, entertaining, exciting superhero ride!**\r\n\r\nBlack Adam has its haters, and I can understand why. It doesn’t necessarily break new ground in the superhero genre, but that doesn’t stop it from being awesome! Action-packed from start to finish. The effects are incredible. I kept myself from saying Wow out loud on multiple occasions. Dwayne Johnson’s Black Adam is absolutely ruthless, ripping armies of henchmen with ease and speed. I was worried a PG-13 rating might soften his brutality, but it did not! The action sequences looked amazing and were well done. I really liked the Justice Society characters, although they all felt a little stereotypical with a SpiderMan jokester, a wise old Professor X, and a quipping leader in the vain of Wolverine or Deadshot. Pierce Brosnan was perfect at Dr. Fate, making me wish he hadn’t been relegated to special guest star status. The movie didn’t waste a ton of time giving background on each character which was wise with so many new heroes on screen. The film had its moments of cheese but didn’t overdo it. Definitely watch the mid-credit scene. It’s stupendous! Black Adam was a fine addition to the superhero genre, and I look forward to what comes next.</string>
    <string name="tv_series">TV Series</string>
    <string name="on_the_air">On The Air</string>
    <string name="cast">Cast</string>
    <string name="movies_and_tv_series">Movies and TV Series</string>
    <string name="photos">Photos</string>
    <string name="close">Close</string>
    <string name="person">Person</string>
    <string name="filmography_movies">Filmography: Movies</string>
    <string name="rating">Rating</string>
    <string name="filmography_tvSeries">Filmography: TV Series</string>
    <string name="known_for">Known for</string>
    <string name="acting">Acting</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="popular_tv_series">Popular TV Series</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="top_rated_tv_series">Top Rated TV Series</string>
    <string name="search_movies_tv_series_persons">Search Movies, TV Series, Persons</string>
    <string name="movie">Movie</string>
    <string name="tv">TV</string>
    <string name="crew">Crew</string>
    <string name="Actor">Actor</string>
    <string name="Actress">Actress</string>
    <string name="department">Department:\u0020</string>
    <string name="see_more_details"><![CDATA[See More Details >]]></string>
    <string name="crew_member">Crew Member</string>
    <string name="popular_persons">Popular persons</string>
    <string name="filmography_movies_as_crew">Filmography: Movies as crew</string>
    <string name="filmography_tv_as_crew">Filmography: TV Series as crew</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New User?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in_to_your_tmdb_account">Sign In to your TMDB account</string>
    <string name="favorite">Favorite</string>
    <string name="watchlist">WatchList</string>
    <string name="rated">Rated</string>
    <string name="created_lists">Created Lists</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="couldntSignIn">Couldn\'t Sign In</string>
    <string name="signedIn">"Successfully Signed In "</string>
    <string name="couldntSignOut">Couldn\'t Sign Out</string>
    <string name="couldntMarkAsFavorite">Couldn\'t add to favorites</string>
    <string name="addedToFavorites">Added to favorites</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="please_sign_in">Please Sign In!</string>
    <string name="couldntGetCredits">Couldn\'t get credits</string>
    <string name="couldntGetReviews">Couldn\'t get reviews</string>
    <string name="removed_from_watchlist">Removed from watchlist</string>
    <string name="added_to_watchlist">Added to watchlist</string>
    <string name="rated_successfully">Rated successfully</string>
    <string name="couldntRateMovie">Couldn\'t rate movie</string>
    <string name="couldntRateTv">Couldn\'t rate TV</string>
    <string name="couldntAddToWatchlist">Couldn\'t add to watchlist</string>
    <string name="couldntGetAccountStates">Couldn\'t get account states</string>
    <string name="couldntDeleteRating">Couldn\'t delete rating</string>
    <string name="delete">Delete</string>
    <string name="rating_deleted_successfully">Rating deleted successfully</string>
    <string name="update_rating">Update rating</string>
    <string name="couldntGetAccountDetails">Couldn\'t get account details</string>
    <string name="pleaseFillOutFields">Please fill out all required fields!</string>
    <string name="pleaseFillOutThisField">Please fill out this field!</string>
    <string name="couldntGetPersonsMovies">Couldn\'t get persons\' movies</string>
    <string name="couldntGetPersonsTv">Couldn\'t get persons\' TV Series</string>
    <string name="couldntGetPersonDetails">Couldn\'t get person details</string>
    <string name="errorGettingPopularMovies">Error getting popular movies</string>
    <string name="errorGettingTopMovies">Error getting top rated movies</string>
    <string name="errorGettingNowPlayingMovies">Error getting now playing movies</string>
    <string name="errorGettingUpcomingMovies">Error getting upcoming movies</string>
    <string name="errorGettingPopularTv">Error getting popular TV</string>
    <string name="errorGettingTopRatedTv">Error getting top-rated TV</string>
    <string name="errorGettingAiringTv">Error getting airing TV</string>
    <string name="errorGettingMovieDetails">Error getting movie details</string>
    <string name="errorGettingMovieImages">Error getting movie images</string>
    <string name="errorGettingMovieCollection">Error getting movie collection</string>
    <string name="errorGettingMovieRecommendations">Error getting movie recommendations</string>
    <string name="errorGettingMovieVideos">Error getting movie videos</string>
    <string name="errorGettingTvVideos">Error getting TV videos</string>
    <string name="errorGettingTvRecommendations">Error getting TV recommendations</string>
    <string name="errorGettingTvCollection">Error getting TV collection</string>
    <string name="errorGettingTvImages">Error getting TV images</string>
    <string name="errorGettingSeasonDetails">Error getting season details</string>
    <string name="errorGettingPersonImages">Error getting person images</string>
    <string name="images">Images</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sequels_and_prequels">Sequels and Prequels</string>
    <string name="see_also">See Also</string>
    <string name="season">season</string>
    <string name="seasons">seasons</string>
    <string name="episode">episode</string>
    <string name="episodes">episodes</string>
    <string name="minutes">min</string>
    <string name="united_states_of_america">United States of America</string>
    <string name="usa">USA</string>
    <string name="seasons_title">Seasons</string>
    <string name="name">Name:</string>
    <string name="episodes_title">Episodes</string>
    <string name="episodes_with_colon">Episodes:</string>
    <string name="air_date">Air date:</string>
    <string name="no_episodes_yet">No episodes yet</string>
    <string name="videos">Videos</string>
    <string name="error_loading_video">Error loading video</string>
    <string name="errorGettingSearchResults">Error getting search results</string>
</resources>