<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.profile.lists.watchlist.WatchlistFragment">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_watchlist"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:navigationIcon="@drawable/ic_arrow_left"
        app:title="@string/watchlist" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_watchlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tb_watchlist"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/orange"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/orange"
        app:tabTextColor="@color/light_gray">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_series" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager_watchlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_watchlist" />

</RelativeLayout>